# GestureMouseCV

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  gesture_controller.py  main.py  model.h5  pyproject.toml  requirements.txt  scaler_mean.npy  scaler_scale.npy  train_model.py
.github/workflows/: ci.yml
tests/: test_gesture_logic.py
